[package]
name = "sesame"
version = "0.1.0"
authors = ["Arnaud Tournier <arnaud.tournier@stack-labs.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "0.7.8", features=["ssl"] }
jsonwebtoken = "5"
serde_derive = "1"
serde = "1"
ring = "0.13.5"
untrusted = "0.6.2"
openssl-sys = "0.9"
openssl = "0.10"
base64 = "0.10.1"
uuid = "0.7.2"
rustls = "0.14.0"

[[bin]]
name = "sesame"
path = "src/main.rs"
